# StrellerMinds-SmartContracts

./: .cspell.json  .git_commit_msg3.txt  .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  401_CORS_Bug_Analysis.md  CHANGELOG.md  CI_ISSUES_FIXED.md  CI_VALIDATION_REPORT.md  CI_WORKFLOW_FIXES.md  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENTS.md  COMMUNITY.md  COMMUNITY_GUIDELINES.md  CONTRACTS.md  CONTRIBUTING.md  CORS_FIX_DOCUMENTATION.md  Cargo.toml  EMAIL_NOTIFICATION_SYSTEM_IMPLEMENTATION.md  FILES_MANIFEST.md  FILES_MODIFIED_SUMMARY.txt  FINAL_PR_DESCRIPTION.md  GA4_INTEGRATION.md  GITHUB_ISSUES.json  IMAGE_OPTIMIZATION_README.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_NEW_FEATURES.md  LEARNING_PATH_TEMPLATES_IMPLEMENTATION.md  LEARNING_PATH_TEMPLATES_PR.md  MIGRATION_GUIDE_V1_TO_V2.md  MIGRATION_PR_DESCRIPTION.md  Makefile  PERF_PR_DESCRIPTION.md  PR_CREATION_GUIDE.md  PR_DESCRIPTION.md  PR_DESCRIPTION_COMPLETE.md  PR_DESCRIPTION_INADEQUATE_DOCUMENTATION.md  PR_DESCRIPTION_INADEQUATE_ERROR_HANDLING.md  PR_DESCRIPTION_UNUSED_IMPORTS.md  (+38 more)
api/: README.md  (+9 more)
contracts/assessment/: Cargo.toml  README.md
contracts/assessment/src/: errors.rs  events.rs  gas_optimized.rs  grading.rs  lib.rs  test.rs  types.rs
contracts/assessment/test_snapshots/test/: test_adaptive_state_updates.1.json  test_create_and_publish_assessment.1.json  test_single_choice_grading.1.json
contracts/community/: Cargo.toml  README.md
contracts/community/src/: analytics.rs  community_events.rs  errors.rs  events.rs  forum.rs  governance.rs  knowledge.rs  lib.rs  mentorship.rs  moderation.rs  storage.rs  tests.rs  types.rs
contracts/community/test_snapshots/tests/: test_admin_bypasses_rate_limit.1.json  test_create_event.1.json  test_create_event_invalid_time_range.1.json  test_create_post.1.json  test_create_proposal.1.json  test_create_proposal_zero_voting_duration.1.json  test_create_reply.1.json  test_create_reply_short_content.1.json  test_event_registration.1.json  test_mark_solution.1.json  test_mentorship_flow.1.json  test_post_rate_limit_exceeded.1.json  test_rate_limit_resets_after_window.1.json  test_rate_limits_independent_per_operation.1.json  test_rate_session_out_of_range.1.json  test_register_mentor.1.json  test_review_contribution.1.json  test_submit_contribution.1.json  test_user_stats.1.json  test_vote_post.1.json
contracts/cross-chain-credentials/: Cargo.toml  README.md
contracts/cross-chain-credentials/src/: enhanced_verification.md  enhanced_verification.rs  errors.rs  interface.rs  lib.rs  storage.md  storage.rs  tests.rs  types.rs  verification.rs  zkp.rs
contracts/cross-chain-credentials/test_snapshots/tests/: test_cross_chain_verification.1.json  test_generate_transcript.1.json  test_health_check_after_init.1.json  test_health_check_before_init.1.json  test_issue_credential.1.json  test_oracle_management.1.json  test_verification_request.1.json  test_verify_revoked_credential_returns_error.1.json
contracts/custom-domain/: Cargo.toml
contracts/custom-domain/src/: lib.rs
contracts/diagnostics/: Cargo.toml  README.md  test_scenarios.md
contracts/diagnostics/src/: anomaly_detector.rs  behavior_analyzer.rs  benchmark_engine.rs  distributed_tracer.rs  errors.rs  errors_test.rs  events.rs  lib.rs  optimization_engine.rs  performance_monitor.rs  performance_profiler.rs  predictive_engine.rs  regression_tester.rs  resource_optimizer.rs  state_tracker.rs  storage.rs  transaction_tracer.rs  types.rs
contracts/documentation/: Cargo.toml  README.md
contracts/documentation/src/: analytics.rs  api_docs.rs  contributions.rs  documents.rs  errors.rs  knowledge.rs  lib.rs  storage.rs  tests.rs  translations.rs  tutorials.rs  types.rs  versions.rs
contracts/documentation/test_snapshots/tests/: test_add_code_example_to_endpoint.1.json  test_all_difficulty_levels.1.json  test_all_document_types.1.json  test_complete_tutorial.1.json  test_contribution_types_coverage.1.json  test_create_api_endpoint.1.json  test_create_article.1.json  test_create_document.1.json  test_create_duplicate_api_endpoint.1.json  test_create_duplicate_article.1.json  test_create_duplicate_document.1.json  test_create_duplicate_faq.1.json  test_create_duplicate_translation.1.json  test_create_duplicate_tutorial.1.json  test_create_faq.1.json  test_create_multiple_versions.1.json  test_create_translation.1.json  test_create_tutorial.1.json  test_create_version.1.json  test_double_initialize.1.json  test_full_document_lifecycle.1.json  test_get_api_endpoint.1.json  test_get_article.1.json  test_get_contribution.1.json  test_get_current_version.1.json  test_get_document.1.json  (+27 more)
contracts/fraud-detection/: Cargo.toml  README.md
contracts/fraud-detection/src/: lib.rs  tests.rs
contracts/gdpr/: Cargo.toml
contracts/gdpr/src/: errors.rs  lib.rs  types.rs
contracts/marketplace/: Cargo.toml  README.md
contracts/marketplace/src/: lib.rs
contracts/social-sharing/: Cargo.toml
contracts/social-sharing/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/student-outcome-tracker/: Cargo.toml
contracts/student-outcome-tracker/src/: errors.rs  lib.rs  test.rs
contracts/student-progress-tracker/: Cargo.toml  README.md
contracts/student-progress-tracker/src/: errors.rs  gas_optimized.rs  lib.rs  test.rs
contracts/tax-management/: Cargo.toml
contracts/tax-management/src/: errors.rs  lib.rs  test.rs  types.rs
contracts/webhook/: Cargo.toml  README.md
contracts/webhook/src/: errors.rs  integration_tests.rs  lib.rs  tests.rs  types.rs
e2e-tests/: Cargo.toml
e2e-tests/src/: certificate_integration.rs  certificate_integration_disabled.rs  comprehensive_test_coverage.rs  gas_benchmark.rs  input_validation_tests.rs  lib.rs  test_data.rs  test_utils.rs
e2e-tests/test_snapshots/: test_storage_volume.1.json
e2e-tests/tests/: analytics_integration.rs  certificate_workflow.rs  contract_validation.rs  load_testing.rs  scalability.rs  user_journey.rs
utils/streller-cli/: Cargo.toml
utils/streller-cli/src/: debug.rs  main.rs  testing.rs
(+762 files in other folders)
