[workspace]
members = ["contracts/*", "e2e-tests", "utils/streller-cli", "utils/streller-cli-enhanced"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "22.0.0"
stellar-strkey = "0.0.7"
ed25519-dalek = "2.0.0"
rand = "0.8.5"
proptest = "1.4.0"
shared = { path = "contracts/shared" }

# Testing dependencies
quickcheck = "1.0.0"
criterion = { version = "0.5", features = ["html_reports"] }

# Coverage and analysis
cargo-llvm-cov = "0.5"
cargo-tarpaulin = "0.27"
cargo-coverage-report = "0.2"

# Security and audit
cargo-audit = "0.17"
cargo-deny = "0.13"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 16
lto = true
incremental = true

[profile.production]
inherits = "release"
codegen-units = 1
incremental = false

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
