[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
hex = "0.4"
stellar-strkey = { workspace = true }

# Test framework
tokio-test = "0.4"

# Contract dependencies for testing
shared = { path = "../contracts/shared" }
analytics = { path = "../contracts/analytics" } 
token = { path = "../contracts/token" }
certificate = { path = "../contracts/certificate" }
assessment = { path = "../contracts/assessment" }
community = { path = "../contracts/community" }

# Random number generation for test data
rand = "0.8"

# Optional: For more advanced testing scenarios
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# OpenAPI validation
schemars = "0.8"
serde_yaml = "0.9"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "analytics_integration"
path = "tests/analytics_integration.rs"

[[test]]
name = "scalability"
path = "tests/scalability.rs"

[[test]]
name = "contract_validation"
path = "tests/contract_validation.rs"