[package]
name = "cross-chain-credentials"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.3.1"
shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }

[package.metadata.docs.rs]
all-features = true
