[package]
name = "custom-domain"
version = "0.1.0"
edition = "2021"
description = "Custom domain management for institutional credential portals — supports subdomain registration, SSL status tracking, and DNS configuration (fixes #436)"
license = "Apache-2.0"
repository = "https://github.com/StarkMindsHQ/StrellerMinds-SmartContracts"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
