[package]
name = "diagnostics"
version = "0.1.0"
edition = "2021"
authors = ["StarkMinds Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }


[features]
testutils = ["soroban-sdk/testutils"]

[package.metadata.docs.rs]
all-features = true
