[package]
name = "documentation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.3.1"
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }

[package.metadata.docs.rs]
all-features = true
