[package]
name = "gdpr"
version = "0.1.0"
edition = "2021"
description = "GDPR-compliant data export contract for StrellerMinds - enables users to request and retrieve all their data in a machine-readable format"
license = "Apache-2.0"
repository = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
readme = "README.md"
homepage = "https://github.com/Jayy4rl/StrellerMinds-SmartContracts"
documentation = "https://docs.rs/gdpr"
keywords = ["stellar", "blockchain", "education", "gdpr", "compliance"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.docs.rs]
all-features = true