[package]
name = "student-outcome-tracker"
version = "0.1.0"
edition = "2021"
description = "A contract for tracking post-graduation student outcomes including career placement, salary, job satisfaction, and impact metrics with privacy preservation"
license = "Apache-2.0"
repository = "https://github.com/StarkMindsHQ/StrellerMinds-SmartContracts"
keywords = ["stellar", "blockchain", "education", "outcomes", "soroban"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
