[package]
name = "student-progress-tracker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
soroban-sdk = { version = "^23.0.0", features = ["testutils"] }

[dependencies]
soroban-sdk = "^23.0.0"
soroban-sdk = { workspace = true, features = ["testutils"] }

[dependencies]
soroban-sdk = { workspace = true }
