[package]
name = "tax-management"
version = "0.1.0"
edition = "2021"
description = "Tax document storage on IPFS and tax advisor integration for StrellerMinds"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
