[package]
name = "webhook"
version = "0.1.0"
edition = "2021"
description = "Webhook support for third-party integrations: certificate issued, student progress, and achievement unlock events with retry logic and HMAC signing"
license = "Apache-2.0"
repository = "https://github.com/StarkMindsHQ/StrellerMinds-SmartContracts"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
