[package]
name = "streller-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
# The core CLI framework for parsing arguments and commands
clap = { version = "4.5", features = ["derive"] }

# Acceptance Criteria: "Add interactive mode" (Select, Confirm, etc.)
inquire = "0.7"

# For executing the existing shell scripts in your /scripts folder
run_script = "0.11"

# For beautiful terminal colors and styling
console = "0.16"

# For progress bars (useful for long deployments)
indicatif = "0.17"

# For async execution
tokio = { version = "1.37", features = ["full"] }

# For debugging tools
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# For testing utilities
regex = "1.10"
walkdir = "2.4"